fix : drawer close overlap

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 .topBar{
   display: flex;
   justify-content: space-between;
-  margin: 20px
+  margin: 20px;
+  position: relative;
 }
 .saveBtn{
   width: 120px;
@@ -18,6 +19,8 @@
   box-shadow: 0px 0px 10px 0px var(--btn-color);
   cursor: pointer;
   z-index: 5;
+  position: absolute;
+  right: 0;
 }
 .saveBtn:hover{
   background-color: var(--btn-color-hover);
