--- a/src/Overlay/Overlay.css
+++ b/src/Overlay/Overlay.css
@@ -35,7 +35,7 @@
 
   }
   .wrapper{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
